src/test/deca/context/valid/homeMade/tests/test328_affectation_sous_type.deca
// test valide de la règle 3.28


{
    float a = 7;
}