src/test/deca/context/invalid/homeMade/tests/test328_affectation_sous_type/test328_affectation_sous_type3.deca
// test invalide de la règle 3.28


{
    int a = true;
}